--- a/portfolio.html
+++ b/portfolio.html
@@ -199,15 +199,10 @@ bottom: 0;
 <p> I'm a motivated programmer with a passion for ethical hacking and web development. <br>This is the webpage of my personal portfolio. </p>
 </div>
 
-<div class="right-side">
-<img src=  class =  width=10 height=10 >
-</div>
-</div>
-
 <section id= "about" class="about">
 <div class="aboutme">
 <div class="image">
-<img src="C:\Users\rshwe\OneDrive\me.jpg" class="me" width=300 height=200>
+<img src="me.jpg" width=300 height=200>
 </div>
 <div class="text">
 <h2> About Me🙎🏻‍♀️</h2>
