--- a/portfolio.html
+++ b/portfolio.html
@@ -227,7 +227,7 @@ bottom: 0;
 </p>
 </div>
 <div class="image">
-<img src="C:\Users\rshwe\OneDrive\edu.jpg" class="edu" width=200 height=300>
+<img src="edu.jpg" width=200 height=300>
 </div>
 </div>
 </section>
@@ -238,7 +238,7 @@ bottom: 0;
 <section id= "skills" class="skills">
 <div class="skills_div">
 <div class="image">
-<img src="C:\Users\rshwe\OneDrive\project.jpg" class="project" width=300 height=300>
+<img src="project.jpg" width=300 height=300>
 </div>
 <div class="text">
 <h2> Skills🪄</h2>
@@ -284,7 +284,7 @@ Tools Used: Arduino IDE, Sensors and Speakers, IoT </li>
 </p>
 </div>
 <div class="image">
-<img src="C:\Users\rshwe\OneDrive\skills.jpg" class="skills" width=300 height=400>
+<img src="skills.jpg" width=300 height=400>
 </div>
 </div>
 </section>
