--- a/portfolio.html
+++ b/portfolio.html
@@ -294,7 +294,7 @@ Tools Used: Arduino IDE, Sensors and Speakers, IoT </li>
 <div class="left-side">
 <h2> Resume📄 </h2>
 <p>  Here is my resume, which includes a summary of my background as a second-year engineering student and my experience.<br>
-<a href="ShwethaR-resume.docx">Resume</a>
+<a href="ShwethaR-resume.pdf">Resume</a>
 </p>
 </div>
 </section>
@@ -302,7 +302,7 @@ Tools Used: Arduino IDE, Sensors and Speakers, IoT </li>
 <section id= "contact" class="contact">
 <div class="right-side">
 <h2> Contact Me☎️</h2>
-<p> 📞<b>Mobile No.  :</b> +91 9606258144 <br> 📧<b>Mail ID:</b> rshwetha.2305@gmail.com </p>
+<p> 📞<b>Mobile No.  :</b> +91  9xxxxxx1xx  <br> 📧<b>Mail ID:</b> rshwetha.2305@gmail.com </p>
 </div>
 </section>
 
