--- a/landing.html
+++ b/landing.html
@@ -197,7 +197,7 @@ bottom: 0;
 <section id="contact" class="contact">
 <div class="right-side">
 <h1> Contact Us☎️</h1>
-<p> 📞<b>Mobile No.  :</b> +91 9606000456 <br> 📧<b>Mail ID:</b> newmeasia@gmail.com </p>
+<p> 📞<b>Mobile No.  :</b> +91 9xxxxxxxx1 <br> 📧<b>Mail ID:</b> newmeasia@gmail.com </p>
 </div>
 </section>
 
