--- a/landing.html
+++ b/landing.html
@@ -133,7 +133,7 @@ bottom: 0;
 <body>
 <header>
 <div class="Heading"> 
-<img src="C:\Users\rshwe\OneDrive\newme.jpg" class="newme" width=70 height=70">
+<img src="newme.jpg" class="newme" width=70 height=70">
 </div>
 <div class="topright">
 <nav class = "navigation">
