--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,10 @@ bottom: 0;
 </div>
 <div class="text">
 <h2> About Me🙎🏻‍♀️</h2>
-<p> I'm a diligent and ambitious student of Electronics and Communications Engineering. <br>Big Data, AI, development, embedded systems, and VLSI are areas of great interest <br>to me. My passion for web development and programming has enabled<br>me to create engaging and original solutions to challenges in the <br> real world. 
+<p> I'm a diligent and ambitious student of Electronics and Communications Engineering. <br>
+  Big Data, AI, development, embedded systems, and VLSI are areas of great interest <br>
+  to me. My passion for web development and programming has enabled<br>me to create engaging and original solutions to challenges in the <br> 
+  real world. 
   </p>
 </div>
 </div>
@@ -269,7 +272,8 @@ bottom: 0;
 <div class="text">
 <p> 
 <ul>
-<li><b>Meditrack</b><br> Project Description: Meditrack is a Medical Inventory System which manages the database of an institution with various functions such as generating bills, displaying the stock of medicines available, etc. 
+<li><b>Meditrack</b><br> Project Description: Meditrack is a Medical Inventory System which manages the database of an 
+  institution with various functions such as generating bills, displaying the stock of medicines available, etc. 
 <br>
 Tools Used: Python, SQL, GUI</li>
 <br>
@@ -277,7 +281,8 @@ Tools Used: Python, SQL, GUI</li>
 <br>
 Tools Used: C programming</li>
 <br>
-<li><b>Parking Sensor System</b> <br> Project Description: Parking Sensor System is used in vehicles which tells the distance between the next obstacle and the vehicle and indicates the danger with coloured lights.
+<li><b>Parking Sensor System</b> <br> Project Description: Parking Sensor System is used in vehicles which tells 
+  the distance between the next obstacle and the vehicle and indicates the danger with coloured lights.
 <br>
 Tools Used: Arduino IDE, Sensors and Speakers, IoT </li>
 </p>
